--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "cup-ssg",
+  "name": "cup",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "loadDocs": "rm -r docs && cp -a ../docs .",
-    "docusaurus": "npm run loadDocs && docusaurus",
-    "start": "npm run loadDocs && docusaurus start",
-    "build": "npm run loadDocs && docusaurus build",
-    "swizzle": "npm run loadDocs && docusaurus swizzle",
-    "deploy": "npm run loadDocs && docusaurus deploy",
-    "clear": "npm run loadDocs && docusaurus clear",
-    "serve": "npm run loadDocs && docusaurus serve",
+    "docusaurus": "docusaurus",
+    "start": "docusaurus start",
+    "build": "docusaurus build",
+    "swizzle": "docusaurus swizzle",
+    "deploy": "docusaurus deploy",
+    "clear": "docusaurus clear",
+    "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
